fixed navbar alignment

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,3 +1,8 @@
+.brand_logo {
+    width: 100%;
+    height: 100%;
+}
+
 .navbar {
     position: fixed;
     top: 0;
